--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ venv
 **/*.log
 .tox
 
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # vscode ignores
 .vscode/*
 !.vscode/settings.json
