--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -30,7 +30,7 @@ jobs:
     
     # Run only on Workflow Dispatch and Schedule
     runs-on: self-hosted-aiverify
-    timeout-minutes: 120
+    timeout-minutes: 180
     permissions:
       id-token: write
       contents: read
@@ -122,30 +122,30 @@ jobs:
           echo "Integration Test Data Prepared"
 
       # Run UI Integration Test
-      # - name: Run UI Integration Test
-      #   run: |
-      #     cd integration-testing
-      #     npm install
-      #     npx playwright install --with-deps
-      #     URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/portal
+      - name: Run UI Integration Test
+        run: |
+          cd integration-testing
+          npm install
+          npx playwright install --with-deps
+          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/portal
 
       # Upload Playwright Traces
-      # - name: Upload Playwright Traces
-      #   if: ${{ failure() }}
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: playwright-trace-v2.0-integration-testing-${{ github.run_id }}
-      #     path: |
-      #       ${{ github.workspace }}/integration-testing/test-results/
+      - name: Upload Playwright Traces
+        if: ${{ failure() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-trace-v2.0-integration-testing-${{ github.run_id }}
+          path: |
+            ${{ github.workspace }}/integration-testing/test-results/
 
       # Run API Integration Test
-      # - name: Run API Integration Test
-      #   if: always()
-      #   run: |
-      #     cd integration-testing
-      #     npm install
-      #     npx playwright install --with-deps
-      #     URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
+      - name: Run API Integration Test
+        if: always()
+        run: |
+          cd integration-testing
+          npm install
+          npx playwright install --with-deps
+          URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
 
       # Run Standalone Plugin Integration Test
       - name: Run Standalone Plugin Integration Test
@@ -155,4 +155,4 @@ jobs:
           python -m venv .venv
           source .venv/bin/activate
           pip install pytest requests
-          pytest . -vv -k "test_digital_corruptions_docker_zip"
+          pytest . -vv
