Update Command to use Dockerfile for CI

--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -85,7 +85,10 @@ jobs:
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
-          cd deployment/docker-compose-dev
+          cd aiverify-test-engine-worker
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
+          cd ../deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
