--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -87,13 +87,8 @@ jobs:
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
-          cd aiverify-apigw
-          rm Dockerfile
-          mv Dockerfile.ci Dockerfile
-          cd ../aiverify-test-engine-worker
-          rm Dockerfile
-          mv Dockerfile.ci Dockerfile
-          cd ../deployment/docker-compose-dev
+          docker buildx build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
