--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -94,7 +94,7 @@ jobs:
           docker buildx build --platform linux/amd64 -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache --load .
           docker image list
           cd deployment/docker-compose-dev
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
+          docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
 
