Echo Target Arch

--- a/aiverify-apigw/Dockerfile
+++ b/aiverify-apigw/Dockerfile
@@ -42,6 +42,7 @@ RUN pip install -e . && \
     npm install ../../aiverify-shared-library
 
 # add library links
+RUN echo "$TARGETARCH"
 RUN if [ "$TARGETARCH" = "amd64" ] ; then ln -s /lib/x86_64-linux-gnu /lib/custom-linux-gnu; else ln -s /lib/aarch64-linux-gnu /lib/custom-linux-gnu; fi
 
 # Stage 2: Runtime stage
