--- a/.github/workflows/v2-smoke-test.yml
+++ b/.github/workflows/v2-smoke-test.yml
@@ -95,7 +95,7 @@ jobs:
           docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
           docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
           docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
-          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --build-arg=amd64 --no-cache .
+          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
           docker image list
           cd deployment/docker-compose-dev
           docker-compose --profile automated-tests-venv --profile portal up -d
