Add Run command

--- a/aiverify-apigw/Dockerfile
+++ b/aiverify-apigw/Dockerfile
@@ -43,7 +43,7 @@ RUN pip install -e . && \
 
 # add library links
 # RUN if [ "$TARGETARCH" = "amd64" ] ; then ln -s /lib/x86_64-linux-gnu /lib/custom-linux-gnu; else ln -s /lib/aarch64-linux-gnu /lib/custom-linux-gnu; fi
-ln -s /lib/x86_64-linux-gnu /lib/custom-linux-gnu
+RUN ln -s /lib/x86_64-linux-gnu /lib/custom-linux-gnu
 
 # Stage 2: Runtime stage
 FROM gcr.io/distroless/cc-debian12:nonroot
