Update Build Commands

--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -163,9 +163,19 @@ jobs:
           docker volume prune --all -f
           docker builder prune -a -f
 
-      # Launch containers in Docker Compose
-      - name: Run images in Docker Compose
+       # Build and Launch Docker Containers
+      - name: Build and Launch Docker Containers
         run: |
+          cd aiverify-apigw
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
+          cd ../
+
+          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+
           cd deployment/docker-compose-dev
           docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
