--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -30,7 +30,7 @@ jobs:
     
     # Run only on Workflow Dispatch and Schedule
     runs-on: self-hosted-aiverify
-    timeout-minutes: 120
+    timeout-minutes: 180
     permissions:
       id-token: write
       contents: read
@@ -63,6 +63,12 @@ jobs:
           ref: main
           repository: aiverify-foundation/aivt-integration-testing
           path: integration-testing
+
+      # Set Python Version
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+            python-version: '3.12'
           
       # Log in to GitHub Container Registry (ghcr.io), needed by Github Actions to access ghcr.io
       - name: Login to GHCR
@@ -81,6 +87,7 @@ jobs:
       # Launch containers in Docker Compose
       - name: Run images in Docker Compose
         run: |
+          docker buildx build --platform linux/amd64 -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache --load .
           cd deployment/docker-compose-dev
           COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
@@ -147,13 +154,39 @@ jobs:
           npx playwright install --with-deps
           URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
 
+      # Clean slate to force rebuild all images
+      - name: Delete all local Docker images
+        run: |
+          docker ps -q | xargs -r docker stop
+          docker images -q | xargs -r docker rmi -f
+          docker system prune -a -f
+          docker volume prune --all -f
+          docker builder prune -a -f
+
+       # Build and Launch Docker Containers
+      - name: Build and Launch Docker Containers
+        run: |
+          cd aiverify-apigw
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
+          cd ../
+
+          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+
+          cd deployment/docker-compose-dev
+          docker-compose --profile automated-tests-venv --profile portal up -d
+          echo "Initialising AI Verify Plugins"
+          sleep 5m
+
       # Run Standalone Plugin Integration Test
-      # - name: Run Standalone Plugin Integration Test
-      #   if: always()
-      #   run: |
-      #     cd integration-testing/tests/standalone-plugins
-      #     python -m venv .venv
-      #     source .venv/bin/activate
-      #     pip install pytest requests
-      #     pytest -vv
-      #   shell: bash
+      - name: Run Standalone Plugin Integration Test
+        if: always()
+        run: |
+          cd integration-testing/tests/standalone-plugins
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install pytest requests
+          pytest . -vv
