Add Target Arch to Dockerfile

--- a/aiverify-apigw/Dockerfile.ci
+++ b/aiverify-apigw/Dockerfile.ci
@@ -4,6 +4,7 @@
 ##
 # define base python version
 ARG PYTHON_VERSION=3.12
+ARG TARGETARCH
 
 # Stage 1: Build stage
 FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
