--- a/aiverify-apigw/Dockerfile.ci
+++ b/aiverify-apigw/Dockerfile.ci
@@ -7,7 +7,8 @@ ARG PYTHON_VERSION=3.12
 ARG TARGETARCH
 
 # Stage 1: Build stage
-FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
+# FROM ghcr.io/aiverify-foundation/aiverify-python-base AS build
+FROM aiverify-python-base AS build
 
 RUN apt-get update && \
     apt-get upgrade -y && \
