--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -84,15 +84,24 @@ jobs:
           docker volume prune --all -f
           docker builder prune -a -f
 
-      # Launch containers in Docker Compose
-      - name: Run images in Docker Compose
+      # Build and Launch Docker Containers
+      - name: Build and Launch Docker Containers
         run: |
-          docker buildx build --platform linux/amd64 -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache --load .
+          cd aiverify-apigw
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
+          cd ../
+          
+          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+          docker build -t aiverify-portal -f aiverify-portal/Dockerfile --no-cache .
+
           cd deployment/docker-compose-dev
-          COMPOSE_DOCKER_CLI_BUILD=1 DOCKER_BUILDKIT=1 docker-compose --profile automated-tests-venv --profile portal up -d
+          docker-compose --profile automated-tests-venv --profile portal up -d
           echo "Initialising AI Verify Plugins"
           sleep 5m
-
+          
        # Prepare Integration Test Data
       - name: Prepare Integration Test Data
         run: |
