--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -50,7 +50,16 @@ jobs:
           sudo chmod -R 777 .
 
       # Checkout AI Verify
-      - name: Checkout Code
+      - name: Checkout Code 
+        if: github.event_name == 'schedule'
+        uses: actions/checkout@v4
+        with:
+          ref: main
+          repository: aiverify-foundation/aiverify
+
+      # Checkout AI Verify (Workflow Dispatch)
+      - name: Checkout Code (Workflow Dispatch)
+        if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v4
         with:
           ref: main
