--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -51,7 +51,7 @@ jobs:
 
       # Checkout AI Verify
       - name: Checkout Code 
-        if: github.event_name == 'schedule'
+        if: (github.event_name == 'schedule')
         uses: actions/checkout@v4
         with:
           ref: main
@@ -59,7 +59,7 @@ jobs:
 
       # Checkout AI Verify (Workflow Dispatch)
       - name: Checkout Code (Workflow Dispatch)
-        if: github.event_name == 'workflow_dispatch'
+        if: (github.event_name == 'workflow_dispatch')
         uses: actions/checkout@v4
         with:
           ref: main
