--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -49,17 +49,17 @@ jobs:
         run: |
           sudo chmod -R 777 .
 
-      # Checkout AI Verify
-      - name: Checkout Code 
-        if: (github.event_name == 'schedule')
-        uses: actions/checkout@v4
-        with:
-          ref: main
-          repository: aiverify-foundation/aiverify
-
       # Checkout AI Verify (Workflow Dispatch)
       - name: Checkout Code (Workflow Dispatch)
         if: (github.event_name == 'workflow_dispatch')
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.branch_to_test }}
+          repository: aiverify-foundation/aiverify
+
+      # Checkout AI Verify
+      - name: Checkout Code 
+        if: (github.event_name == 'schedule')
         uses: actions/checkout@v4
         with:
           ref: main
