--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -174,9 +174,14 @@ jobs:
       #     docker volume prune --all -f
       #     docker builder prune -a -f
 
-       # Build and Launch Docker Containers
+      # Build and Launch Docker Containers
       - name: Build and Launch Docker Containers
         run: |
+          cd aiverify-apigw
+          rm Dockerfile
+          mv Dockerfile.ci Dockerfile
+          cd ../
+
           docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
           docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
           docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
