--- a/.github/workflows/v2-integration-tests.yml
+++ b/.github/workflows/v2-integration-tests.yml
@@ -30,7 +30,7 @@ jobs:
     
     # Run only on Workflow Dispatch and Schedule
     runs-on: self-hosted-aiverify
-    timeout-minutes: 180
+    timeout-minutes: 240
     permissions:
       id-token: write
       contents: read
@@ -87,7 +87,7 @@ jobs:
           docker volume prune --all -f
           docker builder prune -a -f
 
-      # # Build and Launch Docker Containers
+      # Build and Launch Docker Containers
       - name: Build and Launch Docker Containers
         run: |
           cd aiverify-apigw
@@ -140,52 +140,52 @@ jobs:
 
           echo "Integration Test Data Prepared"
 
-      # # Run UI Integration Test
-      - name: Run UI Integration Test
-        run: |
-          cd integration-testing
-          npm install
-          npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/portal
+      # Run UI Integration Test
+      # - name: Run UI Integration Test
+      #   run: |
+      #     cd integration-testing
+      #     npm install
+      #     npx playwright install --with-deps
+      #     URL=http://127.0.0.1 PORT_NUMBER=3000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/portal
 
-      # # Upload Playwright Traces
-      - name: Upload Playwright Traces
-        if: ${{ failure() }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: playwright-trace-v2.0-integration-testing-${{ github.run_id }}
-          path: |
-            ${{ github.workspace }}/integration-testing/test-results/
+      # Upload Playwright Traces
+      # - name: Upload Playwright Traces
+      #   if: ${{ failure() }}
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: playwright-trace-v2.0-integration-testing-${{ github.run_id }}
+      #     path: |
+      #       ${{ github.workspace }}/integration-testing/test-results/
 
-      # # Run API Integration Test
-      - name: Run API Integration Test
-        run: |
-          cd integration-testing
-          npm install
-          npx playwright install --with-deps
-          URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
+      # Run API Integration Test
+      # - name: Run API Integration Test
+      #   run: |
+      #     cd integration-testing
+      #     npm install
+      #     npx playwright install --with-deps
+      #     URL=http://127.0.0.1 PORT_NUMBER=4000 ROOT_PATH=$GITHUB_WORKSPACE/stock-plugins/user_defined_files npx playwright test tests/apigw
 
-      # # Clean slate to force rebuild all images
-      - name: Delete all local Docker images
-        run: |
-          docker ps -q | xargs -r docker stop
-          docker images -q | xargs -r docker rmi -f
-          docker system prune -a -f
-          docker volume prune --all -f
-          docker builder prune -a -f
+      # Clean slate to force rebuild all images
+      # - name: Delete all local Docker images
+      #   run: |
+      #     docker ps -q | xargs -r docker stop
+      #     docker images -q | xargs -r docker rmi -f
+      #     docker system prune -a -f
+      #     docker volume prune --all -f
+      #     docker builder prune -a -f
 
       # Build and Launch Docker Containers
-      - name: Build and Launch Docker Containers
-        run: |
+      # - name: Build and Launch Docker Containers
+      #   run: |
 
-          docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
-          docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
-          docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
+      #     docker build -t aiverify-python-base -f aiverify-test-engine/Dockerfile --no-cache .
+      #     docker build -t aiverify-apigw -f aiverify-apigw/Dockerfile --no-cache .
+      #     docker build -t aiverify-test-engine-worker -f aiverify-test-engine-worker/Dockerfile --no-cache .
 
-          cd deployment/docker-compose-dev
-          docker-compose --profile automated-tests-venv up -d
-          echo "Initialising AI Verify Plugins"
-          sleep 5m
+      #     cd deployment/docker-compose-dev
+      #     docker-compose --profile automated-tests-venv up -d
+      #     echo "Initialising AI Verify Plugins"
+      #     sleep 5m
 
       # Run Standalone Plugin Integration Test
       - name: Run Standalone Plugin Integration Test
